--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     />
     <link
       rel="shortcut icon"
-      href="./src/imagens/favicon.ico"
+      href="./src/img/favicon.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/estilos.css" />
-    <link rel="stylesheet" href="./src/css/responsivo.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/responsive.css" />
 
     <title>Super Mario Bros - O Filme</title>
   </head>
@@ -31,7 +31,7 @@
       <a>
         <img
           class="logo"
-          src="./src/imagens/logo-chapeu-mario.png"
+          src="./src/img/logo-chapeu-mario.png"
           alt="Logo chapéu mario"
         />
       </a>
@@ -46,7 +46,7 @@
       <div class="informacoes">
         <img
           class="imagem-titulo"
-          src="./src/imagens/titulo.png"
+          src="./src/img/titulo.png"
           alt="imagem do título do filme"
         />
         <p class="descricao">
@@ -57,7 +57,7 @@
         </p>
         <button class="botao-trailer">Veja o trailer</button>
       </div>
-      <img class="mario" src="./src/imagens/super-mario-chars.png" />
+      <img class="mario" src="./src/img/super-mario-chars.png" />
       <div class="modal">
         <div class="conteudo-modal">
           <span class="fechar-modal">X</span>
